add header component

--- a/review-products/src/app/app.component.html
+++ b/review-products/src/app/app.component.html
@@ -1,54 +1,6 @@
 <div class="bg-white min-h-screen font-sans">
-  <header class="bg-gray-100 border-b border-gray-300 shadow-sm">
-    <div class="max-w-7xl mx-auto px-4 py-6 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-gray-900">GadgetReview</h1>
-      <button class="md:hidden text-gray-700"
-              (click)="isMenuOpen = !isMenuOpen">
-        <svg xmlns="http://www.w3.org/2000/svg"
-             class="h-6 w-6"
-             fill="none"
-             viewBox="0 0 24 24"
-             stroke="currentColor">
-          <path stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-      </button>
-      <nav class="hidden md:flex space-x-6 text-sm font-medium">
-        <a href="#"
-           class="text-gray-700 hover:text-black">Home</a>
-        <a href="/submit-review"
-           class="text-gray-700 hover:text-black">Write a Review</a>
-        <a href="#"
-           class="text-gray-700 hover:text-black">Best Picks</a>
-        <a href="#"
-           class="text-gray-700 hover:text-black">Categories</a>
-        <a href="#"
-           class="text-gray-700 hover:text-black">About</a>
-      </nav>
-    </div>
-    <div *ngIf="isMenuOpen"
-         class="md:hidden fixed inset-0 top-[64px] z-30 flex items-start justify-center">
-      <div
-           class="relative top-0 w-full bg-gray-100 transition-transform duration-300 ease-in-out transform animate-slide-down z-40">
-        <nav class="flex flex-col items-center justify-center space-y-6 py-12 text-sm font-medium">
-          <a href="#"
-             class="text-gray-700 hover:text-black">Home</a>
-          <a href="/submit-review"
-             class="text-gray-700 hover:text-black">Write a Review</a>
-          <a href="#"
-             class="text-gray-700 hover:text-black">Best Picks</a>
-          <a href="#"
-             class="text-gray-700 hover:text-black">Categories</a>
-          <a href="#"
-             class="text-gray-700 hover:text-black">About</a>
-        </nav>
-      </div>
-    </div>
-
-  </header>
-  <router-outlet></router-outlet>
+   <app-header></app-header>
+   <router-outlet></router-outlet>
 </div>
 
 <app-footer></app-footer>
