add toast component

--- a/review-products/src/app/components/submit-review/submit-review.component.html
+++ b/review-products/src/app/components/submit-review/submit-review.component.html
@@ -64,3 +64,7 @@
     </button>
   </div>
 </div>
+
+<app-toast [message]="toast.message"
+           [type]="toast.type"
+           [show]="toast.show"></app-toast>
