Add error toast for empty fields

--- a/review-products/src/app/components/submit-review/submit-review.component.html
+++ b/review-products/src/app/components/submit-review/submit-review.component.html
@@ -67,4 +67,5 @@
 
 <app-toast [message]="toast.message"
            [type]="toast.type"
-           [show]="toast.show"></app-toast>
+           [show]="toast.show"
+           *ngIf="toast.show"></app-toast>
