--- a/review-products/src/app/components/featured-item/featured-item.component.html
+++ b/review-products/src/app/components/featured-item/featured-item.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white border rounded-2xl h-100 shadow-md overflow-hidden hover:shadow-lg transition">
+<div class="bg-white border rounded-2xl shadow-md overflow-hidden hover:shadow-lg transition">
   <img [src]="featuredItem.mainImage"
        alt="Product"
        class="w-full h-96 object-cover">
