make header stick to top of page & remove unnecessary pages

--- a/review-products/src/app/app.component.html
+++ b/review-products/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="bg-white min-h-screen font-sans">
    <app-header></app-header>
-   <router-outlet></router-outlet>
+   <main class="max-w-7xl mx-auto px-4 py-10 pt-24">
+      <router-outlet></router-outlet>
+   </main>
 </div>
 
 <app-footer></app-footer>
